--- a/style.css
+++ b/style.css
@@ -696,6 +696,10 @@ input[type="radio"]:checked + .radio-label-color {
         align-items: center;
         text-align: center;
     }
+    .partecompraderecha h1
+    {
+        width: 90%;
+    }
     .botoncomprar input 
     {
         width: 240px;
@@ -778,5 +782,6 @@ input[type="radio"]:checked + .radio-label-color {
     border-left: none;
     text-align: center;
 }
+
 
 }
