--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header {
    /* display: flex; */
     font-size: 30px;
     margin-left: auto;
-    width: 33.3%;
+    width: 33.33%;
     display: flex;
     flex-direction: row-reverse;
     flex-wrap: wrap;
@@ -604,11 +604,21 @@ input[type="radio"]:checked + .radio-label-color {
         display: flex;
         flex-direction: column;
         text-align: center;
+        width: 33.3%;
+    }
+    .seccion
+    {
+        margin-right: 0px;
+        margin-left: 0px;
     }
     .contenedorlista
     {
         display: flex;
         flex-direction: column;
+        width: 100%;
+        align-items: center;
+        margin-right: none ;
+        margin-left: 20px;
     }
     .icon
     {
@@ -617,6 +627,14 @@ input[type="radio"]:checked + .radio-label-color {
     .email
     {
         font-size: 11px;
+    }
+    .logo
+    {
+        margin-right: 0px;
+    }
+    .listaitemsmenufooter p
+    {
+        font-size: 14px;
     }
     /* pagina principal */
     .presentacion
@@ -713,75 +731,75 @@ input[type="radio"]:checked + .radio-label-color {
 
     /*resenias*/
 
-.reseña1
-{
-    grid-row: 1 / 2;
-    grid-column: 1/4;
-    text-align: center;
-    border: 1.6px solid black;
-}
-.reseña2
-{
-    grid-row: 2/3;
-    grid-column: 1/4;
-    text-align: center;
-    border: 1.6px solid black;
-    border-left: none;
-}
-.reseña3
-{
-    grid-row: 3/4;
-    grid-column: 1/4;
-    border: 1.6px solid black;
-    border-top: none;
-    text-align: center;
-}
-.reseña4
-{
-    grid-row: 4/5;
-    grid-column: 1/4;
-    border: 1.6px solid black;
-    border-left: none;
-    border-top: none;
-    text-align: center;
-}
-.reseña5
-{
-    grid-row: 5/6;
-    grid-column: 1/4;
-    border: 1.6px solid black;
-    border-top: none;
-    text-align: center;
-}
-.escribirreseña
-{
-    grid-row: 6/7 ;
-    grid-column: 1/4;
-    border: 1.6px solid black;
-    border-left: none;
-    border-top: none;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-.futurareseña1
-{
-    grid-row: 7/8;
-    grid-column: 1/4;
-    border: 1.6px solid black;
-    border-left: none;
-    border-top: none;
-    text-align: center;
-}
-.futurareseña2
-{
-    grid-row: 4/5;
-    grid-column: 1/4;
-    border: 1.6px solid black;
-    border-top: none;
-    border-left: none;
-    text-align: center;
-}
+    .reseña1
+    {
+        grid-row: 1 / 2;
+        grid-column: 1/4;
+        text-align: center;
+        border: 1.6px solid black;
+    }
+    .reseña2
+    {
+        grid-row: 2/3;
+        grid-column: 1/4;
+        text-align: center;
+        border: 1.6px solid black;
+        border-left: none;
+    }
+    .reseña3
+    {
+        grid-row: 3/4;
+        grid-column: 1/4;
+        border: 1.6px solid black;
+        border-top: none;
+        text-align: center;
+    }
+    .reseña4
+    {
+        grid-row: 4/5;
+        grid-column: 1/4;
+        border: 1.6px solid black;
+        border-left: none;
+        border-top: none;
+        text-align: center;
+    }
+    .reseña5
+    {
+        grid-row: 5/6;
+        grid-column: 1/4;
+        border: 1.6px solid black;
+        border-top: none;
+        text-align: center;
+    }
+    .escribirreseña
+    {
+        grid-row: 6/7 ;
+        grid-column: 1/4;
+        border: 1.6px solid black;
+        border-left: none;
+        border-top: none;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    .futurareseña1
+    {
+        grid-row: 7/8;
+        grid-column: 1/4;
+        border: 1.6px solid black;
+        border-left: none;
+        border-top: none;
+        text-align: center;
+    }
+    .futurareseña2
+    {
+        grid-row: 4/5;
+        grid-column: 1/4;
+        border: 1.6px solid black;
+        border-top: none;
+        border-left: none;
+        text-align: center;
+    }
 
 
 }
