--- a/style.css
+++ b/style.css
@@ -591,7 +591,123 @@ input[type="radio"]:checked + .radio-label-color {
     height: 30px;
     margin: 10px;
 }
+.carritocontenedor
+{
+    border-bottom: 1.6px solid black;
+    display: flex;
+    height: 500px;
+    width: 100%;
+}
+.textocarrito
+{
+    width: 25%;
+    border-right: 1.6px solid black;
+    display: flex;
+    flex-direction: column;
+}
+#productoscarrito
+{
+    margin-left: 40px;
+    margin-top: 40px;
 
+}
+.productoscarritoart
+{
+    width: 75%;
+}
+#carritotexto
+{
+    font-size: 40px;
+    text-align: center;
+}
+#botonverificarcarrito
+{
+   /* border: 1.6px solid black; */
+    height: 40px;
+    margin: 10px;
+}
+#listaproductos
+{
+    display: flex;
+    flex-direction: column;
+}
+#listaproductos li
+{
+    font-size: 17px;
+}
+#preciofinal
+{
+    margin-left: 40px;
+}
+#carritotextotitulo
+{
+    text-align: center;
+}
+#borrarcarrito
+{
+    height: 40px;
+    margin: 10px;
+}
+#finalizarcomprabtn
+{
+    height: 40px;
+    margin: 10px;
+}
+#pokeapiacceso
+{
+    height: 40px;
+    margin: 10px;
+    margin-top: 80px;
+    width: 96%;
+}
+#pokeapiacceso button
+{
+    height: 40px;
+    margin: 10px;
+    margin-top: 80px;
+    width: 100%;
+}
+.Tituloapi
+{
+    border-bottom: 1.6px solid black;
+    text-align: center;
+}
+.contenedordeapi
+{
+    display: flex;
+    width: 100%;
+    height: 500px;
+}
+.parteizqapi
+{
+    width: 35%;
+    border-bottom: 1.6px solid black;
+    border-right: 1.6px solid black;
+}
+.partemedapi
+{
+    width: 30%;
+    border-bottom: 1.6px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+}
+.partederapi
+{
+    width: 35%;
+    border-bottom: 1.6px solid black;
+    border-left: 1.6px solid black;
+}
+#generarpokemonbtn
+{
+    width: 100%;
+    height: 70px;
+}
+#nombrePokemon
+{
+    text-align: center;
+}
 /*media query */
 
 @media (max-width:500px)
