--- a/style.css
+++ b/style.css
@@ -9,14 +9,43 @@ a {
     text-decoration: none; /* Quita cualquier subrayado */
     border: none; /* Asegura que no haya bordes en el enlace */
     color: inherit;
+
 }
 p
 {
-    font-family: "Courier Prime"; 
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 option
 {
-    font-family: "Courier Prime"; 
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+span
+{
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+input
+{
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+
+    cursor: pointer;
+}
+label
+{
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+button
+{
+    cursor: pointer;
 }
 header {
     background-color: white;
@@ -123,7 +152,7 @@ border-top: 1.6px solid black;
 }
 .artimgtxt:hover
 {
-    transform: scale(1.1);
+    transform: scale(1.03);
     transition: transform 0.4s ease;
 }
 .txtart
@@ -138,7 +167,6 @@ border-top: 1.6px solid black;
 .txtprecio
 {
     font-size: 16px;
-    font-family: 'Helvetica Neue', sans-serif;
     text-align: center;
     margin-top: 6px;
     margin-bottom: 8px;
@@ -224,7 +252,6 @@ footer p
     border-radius: 20px;
     border: 1.6px solid black;
     margin-bottom: 20px;
-    font-family: "Courier Prime"; 
     cursor: pointer;
 }
 .newsletter input
@@ -241,7 +268,6 @@ footer p
 }
 .newsletter label
 {
-    font-family: "Courier Prime"; 
     font-size: 14px;
     margin: 10px;
 }
@@ -419,7 +445,6 @@ footer p
 }
 .partecompraderecha
 {
-    font-family: "Courier Prime"; 
     width: 98%;
     display: flex;
     flex-direction: column;
@@ -444,11 +469,11 @@ input[type="radio"] {
     width: 35px;
     height: 35px;
     margin: 5px;
-    border: 1.6px solid black;
+    border: 1.6px solid grey;
     text-align: center;
     line-height: 36px; /* Centra el texto verticalmente */
     font-size: 15px;
-    font-weight: lighter;
+    font-weight: bold;
     cursor: pointer;
     border-radius: 5px; /* Para que sea cuadrado con esquinas redondeadas */
 }
@@ -461,11 +486,11 @@ input[type="radio"]:checked + .radio-label {
     width: 60px;
     height: 35px;
     margin: 5px;
-    border: 1.6px solid black;
+    border: 1.6px solid grey;
     text-align: center;
     line-height: 36px; /* Centra el texto verticalmente */
-    font-size: 15px;
-    font-weight: lighter;
+    font-size: 14px;
+    font-weight: bold;
     cursor: pointer;
     border-radius: 5px; /* Para que sea cuadrado con esquinas redondeadas */
 }
@@ -478,7 +503,6 @@ input[type="radio"]:checked + .radio-label-color {
 }
 .botoncomprar input
 {
-    font-family: "Courier Prime"; 
     width: 325px;
     height: 35px;
     border: 1.6px solid black;
@@ -613,10 +637,51 @@ input[type="radio"]:checked + .radio-label-color {
 
 #productoscarrito
 {
-    margin-left: 40px;
+    margin-left: 4%;
     margin-top: 40px;
-    border-bottom: 1.6px solid black;
+    margin-bottom: 20px;
 
+}
+#seguircomprandocarrito
+{
+    padding-left: 4%;
+    border-bottom: 1.6px solid black;
+    padding-bottom: 10px;
+    font-size: 14px;
+}
+.contenedorizquierdacarrito
+{
+    width: 60%;
+    border-radius: 6px;
+}
+.contenedorlabelscarrito
+{
+    border-bottom: 1.6px solid black;
+    width: 100%;
+    display: flex;
+    height: 22px;
+    padding-bottom: 10px;
+    
+}
+.labelscarrito
+{
+    color: grey;
+    
+}
+#labelproducto
+{
+    width: 48%;
+    text-align: center;
+}
+#labelcantidad
+{
+    width: 27%;
+    text-align: center;
+}
+#labelsubtotal
+{
+    width: 25%;
+    text-align: center;
 }
 .productoscarritoart
 {
@@ -627,50 +692,164 @@ input[type="radio"]:checked + .radio-label-color {
     font-size: 40px;
     text-align: center;
 }
-#botonverificarcarrito
-{
-   /* border: 1.6px solid black; */
-    height: 40px;
-    margin: 10px;
-}
+
 #listaproductos
 {
     display: flex;
     flex-direction: column;
 }
+.productosjsoncontenedor
+{
+    width: 100%;
+
+}
 .productomostradoencarrito
 {
     width: 100%;
     display: flex;
-    flex-direction: row-reverse;
+    
     
     border-bottom: 1.6px solid black;
 }
+.productonombrecarritop
+{
+    font-weight: 600;
+}
 .contenedortextoproductos
 {
-    width: 20%;
+    width: 25%;
     text-align: left;
     padding-top: 20px;
 }
-.contenedorimagenproductos
+.contenedorbotoncontador
+{
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.botonficticio
+{
+    width: 120px;
+    height: 45px;
+    border: 1.6px solid black;
+    border-radius: 2px;
+    display: flex;
+}
+.botoncantidadsumar
 {
     width: 20%;
+    border: none;
+    background-color: white;
+    font-size: 18px;
+}
+.botoncantidadrestar
+{
+    width: 20%;
+    border: none;
+    background-color: white;
+    font-size: 18px;
+}
+.botonesborrarstyle
+{
+    
+    border: none;
+    background: none;
+    padding: 0;
+    padding-left: 4px;
+}
+.botonesborrarstyle img
+{
+    width: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: none;
+}
+.numerocantidad
+{
+    border: none;
+    width: 60%;
+    text-align: center;
+
+}
+.numerocantidad::-webkit-inner-spin-button, 
+.numerocantidad::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.contenedorimagenproductos
+{
+    width: 25%;
     display: flex;
     justify-content: center;
 }
 .contenedortotalaislado
 {
-    width: 60%;
+    width: 25%;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.contenedortotalaislado p
+{
+    font-weight: 500;
 }
 #listaproductos li
 {
     font-size: 17px;
 }
+.preciofinalclase
+{
+    width: 25%;
+   /* border: 1px  solid black; */
+    /*border-radius: 6px; */
+    display: flex;
+    flex-direction: column;
+}
+.contenedorcarritoflexbox
+{
+    width: 100%;
+    padding-bottom: 20px;
+    display: flex;  
+    justify-content: space-around;
+    padding-top: px;
+}
 #preciofinal
 {
-    margin-left: 40px;
-    text-align: right;
+    text-align: center;
+    font-size: 17px;
+    font-weight: bold;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1.6px solid black;
+}
+#resumencompraspan
+{
+    height: 22px;
+    font-size: 18px;
+    text-align: center;
+    border-bottom: 1.6px solid black;
+    color: grey;
+    padding-bottom: 10px;
+    
+}
+#contenedorimagenfurgoneta
+{
+    display: flex;
+    justify-content: left;
+    align-content: center;
+    height: 22px;
+    padding-left: 4%;
+    padding-bottom: 4px;
+}
+#textomediosdeenvio
+{
+    padding-left: 4px;
 }
 #carritotextotitulo
 {
@@ -686,65 +865,143 @@ input[type="radio"]:checked + .radio-label-color {
     height: 40px;
     margin: 10px;
 }
-
-/*API*/
-
-#pokeapiacceso
+.contenedorcheckoutbotones
 {
-    height: 40px;
-    margin: 10px;
-    margin-top: 80px;
-    width: 96%;
-}
-#pokeapiacceso button
-{
-    height: 40px;
-    margin: 10px;
-    margin-top: 80px;
-    width: 100%;
-}
-.Tituloapi
-{
-    border-bottom: 1.6px solid black;
-    text-align: center;
-}
-.contenedordeapi
-{
-    display: flex;
-    width: 100%;
-    height: 500px;
-}
-.parteizqapi
-{
-    width: 35%;
-    border-bottom: 1.6px solid black;
-    border-right: 1.6px solid black;
-}
-.partemedapi
-{
-    width: 30%;
-    border-bottom: 1.6px solid black;
     display: flex;
     flex-direction: column;
-    justify-items: center;
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
     align-items: center;
-}
-.partederapi
-{
-    width: 35%;
     border-bottom: 1.6px solid black;
-    border-left: 1.6px solid black;
+    padding-bottom: 20px;
 }
-#generarpokemonbtn
+#botoncheckout
 {
-    width: 100%;
-    height: 70px;
-}
-#nombrePokemon
-{
+    width: 75%;
+    height: 35px;
+    border: 1.6px solid black;
+    border-radius: 5px;
+    font-size: 15px;
+    cursor: pointer;    
+    background-color: black;
+    color: white;
     text-align: center;
 }
-/*media query */
+.contenedor-envio
+{
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+}
+#seguircomprandolink
+{
+    width: 200px;
+    text-align: center;
+    font-size: 14px;
+    text-decoration: underline;
+    padding: 5px;
+
+}
+
+.inputsenvios
+{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content:  center;
+    height: 35px;
+    padding-bottom: 5px;
+}
+#inputcodigopostal
+{
+    width: 80%;
+    border: 1.6px solid black;
+    border-radius: 3px;
+}
+#inputcodigopostal::-webkit-inner-spin-button, 
+#inputcodigopostal::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.encontra-tu-cp
+{
+    font-size: 14px;
+    padding-left: 5%;
+    text-decoration: underline;
+    margin-bottom: 10px;
+}
+.encontra-tu-cp:hover
+{
+    text-decoration: none;
+}
+#botonverificarcp
+{
+    width: 10%;
+    background-color: white;
+    border: 1.6px solid black;
+    border-radius: 3px;
+}
+.contenedortextoenviocp
+{
+    display: flex;
+    width: 95%;
+    padding-left: 5%;
+    padding-top: 8px;
+    border-top: 1.6px solid black;
+    font-size: 14px;
+}
+.contenedorpreciofinalcheckout
+{
+    border-top: 1.6px solid black;
+    border-bottom: 1.6px solid black;
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#strongcp
+{
+    font-weight: bold;
+    padding-left: 4px;
+    
+}
+.labelfechaenvio
+{
+    font-size: 13px;
+    text-decoration: underline;
+}
+.enviodomicilio
+{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.envioasucursal
+{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.contenedoropcionesdeenvio
+{
+    padding-left: 5%;
+}
+.contenedor-label-input-select
+{
+    display: flex;
+    flex-direction: column;
+    width: 96%;
+    padding-top: 16px;
+}
+#preciofinalfinal
+{
+    padding: 15px;
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
+}
+
 
 @media (max-width:500px)
 {
@@ -784,9 +1041,11 @@ input[type="radio"]:checked + .radio-label-color {
     {
         margin-right: 0px;
     }
-    .listaitemsmenufooter p
+    .listaitemsmenufooter li p
     {
         font-size: 14px;
+        font-weight: 800;
+
     }
     /* pagina principal */
     .presentacion
